<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categorical_data"
            android:icon="@drawable/home"
            android:title="@string/categorical_data"
            />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/everyday"
            android:title="@string/every_data" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/random"
            android:title="@string/random_data" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
    </group>

    <!--<item android:title="Sub items">
        &lt;!&ndash;<menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="Sub item 1" />
            <item
                android:icon="@drawable/ic_forum"
                android:title="Sub item 2" />
        </menu>&ndash;&gt;
    </item>-->

</menu>
