<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center"
            >


            <TextView
                android:id="@+id/about_us_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_title"
                android:textColor="@color/material_blue_500"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_content"
                android:gravity="center"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/about_us_mailbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_mailbox"
                android:textColor="@color/material_blue_500"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/about_us_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_tools"
                android:textColor="@color/material_blue_500"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/about_us_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_code"
                android:textColor="@color/material_blue_500"
                android:layout_margin="10dp"
                />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>